RandomForest and XGboost models

--- a/template.ipynb
+++ b/template.ipynb
@@ -112,13 +112,13 @@
    "outputs": [],
    "source": [
     "X_train = train_data.drop('Y', axis=1).to_numpy()\n",
-    "y_train = pd.get_dummies(train_data['Y']).to_numpy()\n",
+    "y_train = train_data['Y'].to_numpy()\n",
     "\n",
     "X_val = val_data.drop('Y', axis=1).to_numpy()\n",
-    "y_val = pd.get_dummies(val_data['Y']).to_numpy()\n",
+    "y_val = val_data['Y'].to_numpy()\n",
     "\n",
     "X_test = test_data.drop('Y', axis=1).to_numpy()\n",
-    "y_test = pd.get_dummies(test_data['Y']).to_numpy()\n"
+    "y_test = test_data['Y'].to_numpy()\n"
    ]
   },
   {
@@ -128,7 +128,7 @@
    "outputs": [],
    "source": [
     "classes = train_data[\"Y\"].unique()\n",
-    "num_classes = y_train.shape[1]\n",
+    "num_classes = len(classes)\n",
     "input_features = X_train.shape[1]\n",
     "categorical_cols = train_data.select_dtypes(include=['object', 'category']).columns\n",
     "\n",
@@ -152,6 +152,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Best Setting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
