--- a/Discussion.ipynb
+++ b/Discussion.ipynb
@@ -6,18 +6,35 @@
    "source": [
     "# Summary and Discussion\n",
     "\n",
+    "## preprocessing done\n",
+    "* splitting data into train, val, test (0.7, 0.15, 0.15) with random seed 777\n",
+    "* filling numerical columns with the mean\n",
+    "* Stander normlizaion on the numerical columns\n",
+    "* filling categorical columns using semi-supervised learning (Imputation with semi supervised learning)\n",
+    "* Upsampling the classes\n",
+    "* encoding categorical variables to numeric values (one hot encoding)\n",
+    "* Feature selection\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Results\n",
     "We evaluated the performance of various machine learning models, including Active Learning XGBoost, Random Forest, XGBoost, SVM, DT, NN, Adaboost, and Logistic Regression.\n",
     "\n",
-    "| Model                  | Accuracy | Precision (Macro) | Recall (Macro) | F1-Score (Macro) | Precision (Weighted) | Recall (Weighted) | F1-Score (Weighted) |\n",
-    "|------------------------|----------|--------------------|-----------------|-------------------|----------------------|-------------------|----------------------|\n",
-    "| Active learning XGBoost| 0.94     | 0.93               | 0.94            | 0.94              | 0.95                 | 0.94              | 0.94                 |\n",
-    "| Random Forest          | 0.94     | 0.93               | 0.86            | 0.88              | 0.94                 | 0.94              | 0.94                 |\n",
-    "| XGBoost                | 0.93     | 0.88               | 0.91            | 0.90              | 0.93                 | 0.93              | 0.93                 |\n",
-    "| SVM                    | 0.92     | 0.88               | 0.89            | 0.88              | 0.92                 | 0.92              | 0.91                 |\n",
-    "| DT                     | 0.92     | 0.87               | 0.89            | 0.88              | 0.92                 | 0.92              | 0.92                 |\n",
-    "| NN                     | 0.90     | 0.83               | 0.82            | 0.82              | 0.90                 | 0.90              | 0.90                 |\n",
-    "| Adaboost               | 0.84     | 0.82               | 0.83            | 0.82              | 0.85                 | 0.84              | 0.84                 |\n",
-    "| Logistic Regression    | 0.84     | 0.77               | 0.75            | 0.76              | 0.84                 | 0.84              | 0.84                 |\n",
+    "| Model                  | Accuracy | F1-Score (Macro)   |\n",
+    "|------------------------|----------|--------------------|\n",
+    "| XGBoost                | 0.92     | 0.93               |\n",
+    "| Random Forest          | 0.93     | 0.90               |\n",
+    "| SVM                    | 0.93     | 0.89               |\n",
+    "| NN                     | 0.90     | 0.88               | \n",
+    "| DT                     | 0.89     | 0.86               |\n",
+    "| Adaboost               | 0.84     | 0.82               | \n",
+    "| Logistic Regression    | 0.82     | 0.79               | \n",
+    "| AL XGB uncertainty sampling| 0.75 |\n",
+    "| AL XGB entropy sampling| 0.74     |\n",
+    "\n",
     "\n",
     "**Overall Observation**:\n",
     "\n",
