--- a/Discussion.ipynb
+++ b/Discussion.ipynb
@@ -38,12 +38,8 @@
     "\n",
     "**Overall Observation**:\n",
     "\n",
-    "- **Active Learning XGBoost** and **Random Forest** lead in accuracy, achieving 94%.\n",
-    "- **XGBoost** without active learning follows closely with an accuracy of 93%.\n",
-    "- **SVM, DT, and NN** maintain strong performances with accuracies around 92%.\n",
-    "- **Logistic Regression, and Adaboost** remain the lowest performers with an accuracy of 84%.\n",
-    "\n",
-    "In conclusion, considering accuracy and balanced metrics, **Active Learning XGBoost** and **Random Forest** stand out as the top-performing models for this classification task.\n"
+    "- **Random Forest** and **SVM** lead in accuracy, achieving 93%.\n",
+    "- **XGBoost** lead in f1 macro with f1 macro of 93%.\n"
    ]
   },
   {
