--- a/Discussion.ipynb
+++ b/Discussion.ipynb
@@ -4,6 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Team\n",
+    "\n",
+    "* Ammar Almajed 201922810\n",
+    "* Elyas Almubarak "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Summary and Discussion\n",
     "\n",
     "## preprocessing done\n",
@@ -32,8 +42,8 @@
     "| DT                     | 0.89     | 0.86               |\n",
     "| Adaboost               | 0.84     | 0.82               | \n",
     "| Logistic Regression    | 0.82     | 0.79               | \n",
-    "| AL XGB uncertainty sampling| 0.75 |\n",
-    "| AL XGB entropy sampling| 0.74     |\n",
+    "| AL XGB uncertainty sampling| 0.91 |\n",
+    "| AL XGB entropy sampling| 0.91    |\n",
     "\n",
     "\n",
     "**Overall Observation**:\n",
